--- a/app/src/main/res/layout/activity_temoignage.xml
+++ b/app/src/main/res/layout/activity_temoignage.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_margin="10dp"
     tools:context="bi.udev.guymichel.TemoignageActivity">
 
     <ScrollView
@@ -14,7 +15,6 @@
             android:id="@+id/txt_temoignage"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="18sp"
-            android:layout_margin="10dp" />
+            android:textSize="18sp" />
     </ScrollView>
 </RelativeLayout>
