--- a/app/src/main/res/layout/card_archive.xml
+++ b/app/src/main/res/layout/card_archive.xml
@@ -77,19 +77,45 @@
                         android:layout_centerVertical="true"
                         android:layout_alignParentRight="true"
                         android:layout_alignParentEnd="true" >
-
-                        <Button
-                            android:id="@+id/btn_card_archive_share"
-                            style="@style/Widget.AppCompat.Button.Borderless"
-                            android:layout_width="36dp"
-                            android:layout_height="36dp"
-                            android:background="@drawable/share_icon"/>
-                        <Button
-                            android:id="@+id/btn_card_archive_delete"
-                            style="@style/Widget.AppCompat.Button.Borderless"
-                            android:layout_width="36dp"
-                            android:layout_height="36dp"
-                            android:background="@drawable/delete_icon"/>
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:layout_marginRight="2dp"
+                            android:layout_marginEnd="2dp"
+                            android:orientation="vertical">
+                            <Button
+                                android:id="@+id/btn_card_archive_delete"
+                                style="@style/Widget.AppCompat.Button.Borderless"
+                                android:layout_width="32dp"
+                                android:layout_height="32dp"
+                                android:layout_gravity="center"
+                                android:background="@drawable/delete_icon"/>
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:textSize="10sp"
+                                android:layout_gravity="center"
+                                android:text="@string/delete"/>
+                        </LinearLayout>
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical">
+                            <Button
+                                android:id="@+id/btn_card_archive_share"
+                                style="@style/Widget.AppCompat.Button.Borderless"
+                                android:layout_width="32dp"
+                                android:layout_height="32dp"
+                                android:layout_gravity="center"
+                                android:background="@drawable/share_icon"/>
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:textSize="10sp"
+                                android:layout_gravity="center"
+                                android:text="@string/share"/>
+                        </LinearLayout>
                     </LinearLayout>
                 </RelativeLayout>
 
