--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -15,6 +15,7 @@
 
     </android.support.v4.view.ViewPager>
 
+
     <TextView
         android:id="@+id/lbl_playing"
         android:layout_width="match_parent"
@@ -23,6 +24,8 @@
         android:background="@color/colorPrimary"
         android:textColor="@color/cardview_light_background"
         android:text=""
+        android:maxLines="2"
+        android:layoutDirection="rtl"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
