--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,31 +5,31 @@
         <item
             android:id="@+id/nav_emission"
             android:icon="@drawable/emissions_icon"
-            android:title="Emissions" />
+            android:title="@string/Emission" />
         <item
             android:id="@+id/nav_archives"
             android:icon="@drawable/archive_icon"
-            android:title="Archives" />
+            android:title="@string/Archives" />
         <item
             android:id="@+id/nav_gallery"
             android:icon="@drawable/testimony_icon"
-            android:title="Témoignages" />
+            android:title="@string/Messages" />
     </group>
 
-    <item android:title="Autres">
+    <item android:title="@string/others">
         <menu>
             <item
                 android:id="@+id/nav_temoigner"
                 android:icon="@drawable/temoignage_icon"
-                android:title="Temoigner" />
+                android:title="@string/testify" />
             <item
                 android:id="@+id/nav_settings"
                 android:icon="@drawable/settings_icon"
-                android:title="Reglages" />
+                android:title="@string/action_settings" />
             <item
                 android:id="@+id/nav_about"
                 android:icon="@drawable/info_icon"
-                android:title="A propos" />
+                android:title="@string/about" />
         </menu>
     </item>
 
