commit before changing computer. no time to check real lasts changes

--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -114,6 +114,7 @@
 
 
     <LinearLayout
+        android:id="@+id/btns_share_delete_player"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
