--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -14,11 +14,23 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true">
 
-        <ImageView
+
+        <android.support.v7.widget.CardView
             android:layout_width="144dp"
             android:layout_height="144dp"
             android:layout_gravity="center"
-            android:background="@mipmap/icone"/>
+            android:layout_marginRight="10dp"
+            android:layout_marginEnd="10dp"
+            app:cardCornerRadius="72dp">
+
+            <ImageView
+                android:id="@+id/imageView"
+                android:layout_width="144dp"
+                android:layout_height="144dp"
+                android:layout_gravity="center"
+                android:scaleType="centerCrop"
+                android:background="@mipmap/icone" />
+        </android.support.v7.widget.CardView>
 
         <TextView
             android:layout_width="wrap_content"
@@ -27,5 +39,18 @@
             android:text="@string/app_name"
             android:textSize="30sp" />
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="0dp"
+        android:layout_marginRight="0dp"
+        android:layout_marginBottom="0dp"
+        android:textSize="4pt"
+        android:text="UDEV Team" />
 
 </RelativeLayout>
