--- a/app/src/main/res/layout/card_temoignages.xml
+++ b/app/src/main/res/layout/card_temoignages.xml
@@ -13,11 +13,12 @@
 
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="250dp"
             android:layout_margin="5dp"
-            android:padding="10dp">
+            android:padding="10dp"
+            app:cardElevation="5dp">
 
-            <LinearLayout
+            <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="end"
@@ -25,67 +26,76 @@
 
                 <android.support.v7.widget.CardView
                     android:layout_width="match_parent"
-                    android:layout_height="150dp"
+                    android:layout_height="match_parent"
                     android:layout_margin="5dp"
-                    app:cardElevation="0dp"
-                    app:cardCornerRadius="5dp">
+                    app:cardCornerRadius="5dp"
+                    app:cardElevation="0dp">
 
                     <ImageView
                         android:id="@+id/img_card_testimony"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:scaleType="centerCrop"/>
+                        android:scaleType="fitCenter" />
 
                 </android.support.v7.widget.CardView>
 
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_alignParentBottom="true"
                     android:layout_margin="5dp">
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginBottom="5dp"
+                        android:background="@color/darkTransparent"
                         android:orientation="vertical">
 
                         <TextView
                             android:id="@+id/lbl_title_card_testimony"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:lines="2"
                             android:text="TextView"
-                            android:textSize="18sp"
-                            android:lines="2"/>
+                            android:textColor="#fff"
+                            android:textSize="18sp" />
 
                         <TextView
                             android:id="@+id/lbl_author_card_testimony"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="TextView"
+                            android:textColor="#fff"
                             android:textSize="14sp" />
 
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:orientation="horizontal">
+
                             <TextView
                                 android:id="@+id/lbl_categorie_testimony"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="TextView"
-                                android:textSize="14sp"/>
+                                android:textColor="#fff"
+                                android:textSize="14sp" />
+
                             <TextView
                                 android:id="@+id/lbl_date_card_testimony"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:text="TextView"
                                 android:gravity="end"
-                                android:textSize="14sp"/>
+                                android:text="TextView"
+                                android:textColor="#fff"
+                                android:textSize="14sp" />
                         </LinearLayout>
                     </LinearLayout>
 
                 </RelativeLayout>
 
-            </LinearLayout>
+            </RelativeLayout>
         </android.support.v7.widget.CardView>
     </LinearLayout>
 
