--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -5,18 +5,29 @@
     android:layout_height="160dp"
     android:background="@mipmap/light_wood"
     android:gravity="bottom"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:paddingBottom="16dp"
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
-    <ImageView
-        android:id="@+id/imageView"
+    <android.support.v7.widget.CardView
         android:layout_width="96dp"
         android:layout_height="96dp"
-        app:srcCompat="@mipmap/ic_launcher" />
+        android:layout_gravity="center"
+        android:layout_marginRight="10dp"
+        android:layout_marginEnd="10dp"
+        app:cardCornerRadius="48dp">
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="96dp"
+            android:layout_height="96dp"
+            android:layout_gravity="center"
+            android:scaleType="centerCrop"
+            app:srcCompat="@mipmap/icone" />
+    </android.support.v7.widget.CardView>
 
     <TextView
         android:layout_width="match_parent"
@@ -24,6 +35,7 @@
         android:text="@string/app_name"
         android:textColor="@color/colorPrimaryDark"
         android:textSize="18sp"
+        android:layout_gravity="center"
         android:textStyle="bold" />
 
 </LinearLayout>
