--- a/app/src/main/res/layout/settings_layout.xml
+++ b/app/src/main/res/layout/settings_layout.xml
@@ -75,7 +75,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="2dp"
-            android:background="#7fa87f"
+            android:background="@color/colorPrimaryGreen"
             android:checked="false"
             android:textColor="#fff"
             android:textOff="@string/green"
